--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "codegen": "graphql-codegen"
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
-    "@types/graphql": "^14.5.0",
     "@types/styled-components": "^5.1.25",
     "components": "^0.1.0",
-    "graphql": "^16.5.0",
+    "graphql": "^16.6.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
