--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^6.3.0",
     "react-spinners": "^0.13.3",
     "styled": "^1.0.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "vite-plugin-svgr": "^2.2.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.8.1",
