--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@types/styled-components": "^5.1.25",
+    "add": "^2.0.6",
     "components": "^0.1.0",
     "graphql": "^16.6.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
+    "react-markdown": "^8.0.3",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-spinners": "^0.13.3",
     "styled": "^1.0.0",
     "styled-components": "^5.3.5",
-    "vite-plugin-svgr": "^2.2.1"
+    "vite-plugin-svgr": "^2.2.1",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.8.1",
