--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
@@ -24,6 +26,7 @@
     "react-spinners": "^0.13.3",
     "styled": "^1.0.0",
     "styled-components": "^5.3.5",
+    "unplugin-auto-import": "^0.12.1",
     "vite-plugin-svgr": "^2.2.1",
     "yarn": "^1.22.19"
   },
@@ -35,7 +38,9 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "@vitest/coverage-c8": "^0.28.1",
     "typescript": "^4.6.3",
-    "vite": "^2.9.9"
+    "vite": "^4.0.4",
+    "vitest": "^0.28.1"
   }
 }
